--- a/assets/css/output.css
+++ b/assets/css/output.css
@@ -854,6 +854,10 @@ video {
   overflow: hidden;
 }
 
+.\!overflow-x-hidden {
+  overflow-x: hidden !important;
+}
+
 .rounded-2xl {
   border-radius: 1rem;
 }
@@ -1194,11 +1198,6 @@ video {
   line-height: 1.75rem;
 }
 
-.text-xs {
-  font-size: 0.75rem;
-  line-height: 1rem;
-}
-
 .font-bold {
   font-weight: 700;
 }
@@ -1274,12 +1273,12 @@ video {
 @font-face {
   font-family: Vazir;
 
-  src: url("../fonts/Vazir-Regular.eot");
+  src: url('../fonts/Vazir-Regular.eot');
 
-  src: url("../fonts/Vazir-Regular.eot?#iefix") format("embedded-opentype"),
-    url("../fonts/Vazir-Regular.woff2") format("woff2"),
-    url("../fonts/Vazir-Regular.woff") format("woff"),
-    url("../fonts/Vazir-Regular.ttf") format("truetype");
+  src: url('../fonts/Vazir-Regular.eot?#iefix') format('embedded-opentype'),
+    url('../fonts/Vazir-Regular.woff2') format('woff2'),
+    url('../fonts/Vazir-Regular.woff') format('woff'),
+    url('../fonts/Vazir-Regular.ttf') format('truetype');
 
   font-weight: normal;
 
@@ -1289,12 +1288,12 @@ video {
 @font-face {
   font-family: Vazir;
 
-  src: url("../fonts/Vazir-Bold.eot");
+  src: url('../fonts/Vazir-Bold.eot');
 
-  src: url("../fonts/Vazir-Bold.eot?#iefix") format("embedded-opentype"),
-    url("../fonts/Vazir-Bold.woff2") format("woff2"),
-    url("../fonts/Vazir-Bold.woff") format("woff"),
-    url("../fonts/Vazir-Bold.ttf") format("truetype");
+  src: url('../fonts/Vazir-Bold.eot?#iefix') format('embedded-opentype'),
+    url('../fonts/Vazir-Bold.woff2') format('woff2'),
+    url('../fonts/Vazir-Bold.woff') format('woff'),
+    url('../fonts/Vazir-Bold.ttf') format('truetype');
 
   font-weight: bold;
 
@@ -1304,12 +1303,12 @@ video {
 @font-face {
   font-family: Vazir;
 
-  src: url("../fonts/Vazir-Black.eot");
+  src: url('../fonts/Vazir-Black.eot');
 
-  src: url("../fonts/Vazir-Black.eot?#iefix") format("embedded-opentype"),
-    url("../fonts/Vazir-Black.woff2") format("woff2"),
-    url("../fonts/Vazir-Black.woff") format("woff"),
-    url("../fonts/Vazir-Black.ttf") format("truetype");
+  src: url('../fonts/Vazir-Black.eot?#iefix') format('embedded-opentype'),
+    url('../fonts/Vazir-Black.woff2') format('woff2'),
+    url('../fonts/Vazir-Black.woff') format('woff'),
+    url('../fonts/Vazir-Black.ttf') format('truetype');
 
   font-weight: 900;
 
@@ -1319,12 +1318,12 @@ video {
 @font-face {
   font-family: Vazir;
 
-  src: url("../fonts/Vazir-Medium.eot");
+  src: url('../fonts/Vazir-Medium.eot');
 
-  src: url("../fonts/Vazir-Medium.eot?#iefix") format("embedded-opentype"),
-    url("../fonts/Vazir-Medium.woff2") format("woff2"),
-    url("../fonts/Vazir-Medium.woff") format("woff"),
-    url("../fonts/Vazir-Medium.ttf") format("truetype");
+  src: url('../fonts/Vazir-Medium.eot?#iefix') format('embedded-opentype'),
+    url('../fonts/Vazir-Medium.woff2') format('woff2'),
+    url('../fonts/Vazir-Medium.woff') format('woff'),
+    url('../fonts/Vazir-Medium.ttf') format('truetype');
 
   font-weight: 500;
 
@@ -1334,12 +1333,12 @@ video {
 @font-face {
   font-family: Vazir;
 
-  src: url("../fonts/Vazir-Light.eot");
+  src: url('../fonts/Vazir-Light.eot');
 
-  src: url("../fonts/Vazir-Light.eot?#iefix") format("embedded-opentype"),
-    url("../fonts/Vazir-Light.woff2") format("woff2"),
-    url("../fonts/Vazir-Light.woff") format("woff"),
-    url("../fonts/Vazir-Light.ttf") format("truetype");
+  src: url('../fonts/Vazir-Light.eot?#iefix') format('embedded-opentype'),
+    url('../fonts/Vazir-Light.woff2') format('woff2'),
+    url('../fonts/Vazir-Light.woff') format('woff'),
+    url('../fonts/Vazir-Light.ttf') format('truetype');
 
   font-weight: 300;
 
@@ -1349,12 +1348,12 @@ video {
 @font-face {
   font-family: Vazir;
 
-  src: url("../fonts/Vazir-Thin.eot");
+  src: url('../fonts/Vazir-Thin.eot');
 
-  src: url("../fonts/Vazir-Thin.eot?#iefix") format("embedded-opentype"),
-    url("../fonts/Vazir-Thin.woff2") format("woff2"),
-    url("../fonts/Vazir-Thin.woff") format("woff"),
-    url("../fonts/Vazir-Thin.ttf") format("truetype");
+  src: url('../fonts/Vazir-Thin.eot?#iefix') format('embedded-opentype'),
+    url('../fonts/Vazir-Thin.woff2') format('woff2'),
+    url('../fonts/Vazir-Thin.woff') format('woff'),
+    url('../fonts/Vazir-Thin.ttf') format('truetype');
 
   font-weight: 100;
 
